log-output/manifests/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-pingpong
  namespace: exercises
spec:
  stripPrefix:
    prefixes:
      - /pingpong
